--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create
+# create drops any existing tables and recreates them, set to this for development but obviously no good for production
+# Spring will initialise data using import.sql when this is set to create or create-drop
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=password
