--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-spring.jpa.hibernate.ddl-auto=create
+# Show SQL queries during run
+spring.jpa.show-sql=true
+# Make those queries prettier
+spring.jpa.properties.hibernate.format_sql=true
 # create drops any existing tables and recreates them, set to this for development but obviously no good for production
 # Spring will initialise data using import.sql when this is set to create or create-drop
+spring.jpa.hibernate.ddl-auto=create
+
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Show SQL queries during run
-spring.jpa.show-sql=true
-# Make those queries prettier
-#spring.jpa.properties.hibernate.format_sql=true
 
 # Values used in the creation/verification of JWTs
 auth.token.issuer=BenStrathdee
