added db creation if not present, added comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.jpa.properties.hibernate.format_sql=true
 # Spring will initialise data using import.sql when this is set to create or create-drop
 spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+# Config values for the MYSQL server to connect to
+# The query at the end of this URL allows automatic creation of a db
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/job_assignment_db?createDatabaseIfNotExist=true
+# Storing passwords like this is pretty insecure, please see notes in README
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
